<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_horizontal" android:padding="24dp">

        <ImageView android:id="@+id/imageViewUtfprLogo" android:layout_width="120dp" android:layout_height="120dp" android:src="@drawable/logo_utfpr" android:contentDescription="@string/about_utfpr_logo_desc"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_utfpr_name" android:textSize="18sp" android:textStyle="bold" android:layout_marginTop="8dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_app_description" android:textAlignment="center" android:layout_marginTop="24dp" android:textSize="16sp"/>

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="?android:attr/listDivider" android:layout_marginTop="32dp" android:layout_marginBottom="32dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_author_title" android:textSize="14sp" android:textStyle="bold" android:layout_marginBottom="8dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_author_name" android:textAlignment="center"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_author_course" android:textAlignment="center"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:autoLink="email" android:text="@string/about_author_email" android:textAlignment="center"/>

    </LinearLayout>
</ScrollView>
