<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:padding="16dp"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText android:id="@+id/etCategoryName" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_category_name"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginTop="16dp">
        <Button android:id="@+id/btnSaveCategory" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/btn_save"/>
        <Button android:id="@+id/btnCancelCategory" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/btn_cancel"/>
    </LinearLayout>

</LinearLayout>
